# sleuthgraph-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 315b7e1f6707_phase5_plugin_runs.py  43a9bd17439e_baseline_no_models_yet.py  663a3ab125b0_auth_users.py  839d6ac056bc_phase4_evidence.py  9702779a9df6_phase3_entities.py  a1b2c3d4e5f6_credentials.py  a7c3e8f91b02_session_access_tokens.py  e638ce7e3b34_phase3_relationships.py  e8b9f7244250_phase3_cases.py
docs/: auth-oidc.md  minio-rotation.md  plugins.md
src/sleuthgraph/: __init__.py  config.py  crypto.py  db.py  licensing.py  main.py
src/sleuthgraph/auth/: __init__.py  access_token.py  backend.py  bootstrap.py  deps.py  email.py  forgot_password.py  login.py  manager.py  models.py  oidc.py  oidc_client.py  oidc_id_token.py  oidc_provision.py  oidc_state.py  ping.py  rate_limit.py  register.py  reset_password.py  schemas.py
src/sleuthgraph/cases/: models.py  repository.py  router.py  schemas.py
src/sleuthgraph/credentials/: __init__.py  models.py  repository.py  router.py  schemas.py
src/sleuthgraph/entities/: age.py  models.py  repository.py  router.py  schemas.py  types.py  validators.py
src/sleuthgraph/evidence/: deps.py  export.py  hashing.py  integrity.py  models.py  repository.py  router.py  schemas.py  storage.py
src/sleuthgraph/graph/: age.py  router.py  validators.py
src/sleuthgraph/plugins/: __init__.py  base.py  byok.py  deps.py  models.py  registry.py  repository.py  router.py  runner.py  schemas.py  sweeper.py
src/sleuthgraph/queue/: __init__.py  arq_settings.py  enqueue.py  tasks.py
tests/: conftest.py  test_arq_settings.py  test_auth_backend.py  test_auth_bootstrap.py  test_auth_config.py  test_auth_config_endpoint.py  test_auth_forgot_password_rate_limit.py  test_auth_login_rate_limit.py  test_auth_manager.py  test_auth_model.py  test_auth_oidc.py  test_auth_oidc_callback_rate_limit.py  test_auth_ping.py  test_auth_register_login.py  test_auth_register_rate_limit.py  test_auth_reset_password.py  test_auth_reset_password_rate_limit.py  test_auth_schemas.py  test_auth_signup_disabled.py  test_cases_model.py  test_cases_repository.py  test_cases_router.py  test_cases_schemas.py  test_config.py  test_config_oidc.py  test_credentials.py  test_crypto_oidc.py  test_crypto_subkeys.py  test_db.py  test_docs_toggle.py  test_enqueue_pool.py  test_entities_age.py  test_entities_model.py  test_entities_repository.py  test_entities_router.py  test_entities_schemas.py  test_evidence_export.py  test_evidence_hashing.py  test_evidence_model.py  test_evidence_repository.py  (+40 more)
tests/fixtures/: crtsh_example.json  hibp_breaches.json  shodan_host.json  virustotal_domain.json  virustotal_ip.json  virustotal_url.json
(+19 files in other folders)
