[project]
name = "sleuthgraph"
version = "0.1.0-dev"
description = "Sleuthgraph OSINT investigation backend"
authors = [{ name = "Sadik Erisen" }]
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi[standard]>=0.115.0",
    "fastapi-users[sqlalchemy]>=14,<16",
    "httpx-oauth>=0.16,<1",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "boto3>=1.35.0",
    "aioboto3>=13,<16",
    "anthropic>=0.40.0",
    "tenacity>=9,<10",
    "arq>=0.26,<1",
    "dnspython>=2.6",
    "slowapi>=0.1.9,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/sleuthgraph/routers/*.py" = ["B008"]  # FastAPI Depends() in args is canonical
"src/sleuthgraph/**/router.py" = ["B008"]
"src/sleuthgraph/auth/*.py" = ["B008"]
"src/sleuthgraph/evidence/export.py" = ["B008"]
